--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -29,7 +29,8 @@ editor_options:
   * [IBD, LDL, SBP, WBC: predictdb eQTL / Munro eQTL / predictdb eQTL + sQTL / predictdb eQTL + sQTL + Munro rsQTL + apaQTL / predictdb eQTL + sQTL + Munro stQTL](https://sq-96.github.io/multigroup_ctwas_analysis/multi_group_compare_decidingweights_4traits_ess.html) 
   * [Enrichment analysis using fractional models, for IBD, LDL, SBP, WBC + predictdb eQTL + sQTL /  predictdb eQTL + sQTL + Munro stQTL](https://sq-96.github.io/multigroup_ctwas_analysis/fractional_enrichment.html) 
 
-
+# cTWAS epigenetics results
+  * [cTWAS epigenetic analysis](ctwas_epigenetic_analysis.html)
 
 # Simulation results
   * [Simulation results](simulation_summary.html)
