--- a/analysis/ctwas_epigenetic_analysis.Rmd
+++ b/analysis/ctwas_epigenetic_analysis.Rmd
@@ -26,21 +26,21 @@ colors <- brewer.pal(n = max(lengths(list(prop1, prop2, prop3))), name = "Set2")
 # Plot each pie chart
 pie(
   prop1,
-  labels = paste0(names(prop1), "\n", round(100 * prop1, 1), "%"),
+  labels = paste0(c("eQTL","SNP"), "\n", round(100 * prop1, 1), "%"),
   col = colors,
   border = "white"
 )
 
 pie(
   prop2,
-  labels = paste0(names(prop2), "\n", round(100 * prop2, 1), "%"),
+  labels = paste0(c("caQTL","SNP"), "\n", round(100 * prop2, 1), "%"),
   col = colors,
   border = "white"
 )
 
 pie(
   prop3,
-  labels = paste0(names(prop3), "\n", round(100 * prop3, 1), "%"),
+  labels = paste0(c("mQTL","SNP"), "\n", round(100 * prop3, 1), "%"),
   col = colors,
   border = "white"
 )
@@ -63,21 +63,21 @@ colors <- brewer.pal(n = max(lengths(list(prop1, prop2, prop3))), name = "Set2")
 # Plot each pie chart
 pie(
   prop1,
-  labels = paste0(names(prop1), "\n", round(100 * prop1, 1), "%"),
+  labels = paste0(c("eQTL","caQTL","SNP"), "\n", round(100 * prop1, 1), "%"),
   col = colors,
   border = "white"
 )
 
 pie(
   prop2,
-  labels = paste0(names(prop2), "\n", round(100 * prop2, 1), "%"),
+  labels = paste0(c("eQTL","mQTL","SNP"), "\n", round(100 * prop2, 1), "%"),
   col = colors,
   border = "white"
 )
 
 pie(
   prop3,
-  labels = paste0(names(prop3), "\n", round(100 * prop3, 1), "%"),
+  labels = paste0(c("caQTL","mQTL","SNP"), "\n", round(100 * prop3, 1), "%"),
   col = colors,
   border = "white"
 )
@@ -93,7 +93,7 @@ colors <- brewer.pal(n = 4, name = "Set2")  # Alternatives: "Pastel1", "Dark2", 
 # Draw pie chart
 pie(
   prop_heritability,
-  labels = paste0(names(prop_heritability), "\n", round(100 * prop_heritability, 1), "%"),
+  labels = paste0(c("eQTL","caQTL","mQTL","SNP"), "\n", round(100 * prop_heritability, 1), "%"),
   col = colors,
   border = "white"
 )
